Mon Sep  9 20:41:03 2002  NAKAMURA Usaku <usa@ruby-lang.org>

	* win32/win32.c (do_spawn): fix the bug which the environment variables
	  had not spread.

Sun Sep  8 19:21:48 2002  NAKAMURA Usaku <usa@ruby-lang.org>

	* dir.c (rb_glob): add prototype of 2nd argument to avoid VC++ warning.

	* dir.c (push_pattern): add const directive to 1st argument.

	* dir.c: prototype; push_pattern() to avoid VC++ warning.

	* ext/tcltklib/tcltklib.c: prototype; _timer_for_tcl() and ip_ruby()
	  to avoid VC++ warning.

	* win32/win32.c (win32_stat): remove S_IWGRP and S_IWOTH bits from
	  st_mode.

	* win32/win32.h (S_I*): define if not defined.

Sat Sep  7 23:32:56 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* misc/inf-ruby.el (inferior-ruby-error-regexp-alist): regexp
	  alist for error message from ruby.

	* misc/inf-ruby.el (inferior-ruby-mode): fixed for Emacs.

	* misc/inf-ruby.el (ruby-send-region): compilation-parse-errors
	  doesn't parse first line, so insert separators before each
	  evaluations.

Sat Sep  7 08:44:27 2002  Minero Aoki  <aamine@loveruby.net>

	* parse.y (rb_gc_mark_parser): ruby_eval_tree is marked in eval.c.

Fri Sep  6 12:01:18 2002  Minero Aoki  <aamine@loveruby.net>

	* parse.y (rb_gc_mark_parser): should mark all global variables
	  in parse.y.

Fri Sep  6 05:48:26 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* file.c (rb_path_check): nothing to check under DOSISH.
	  [ruby-list:35772]

Fri Sep  6 05:11:48 2002  Minero Aoki  <aamine@loveruby.net>

	* gc.c (rb_gc): should mark parser.

	* parse.y (rb_gc_mark_parser): new function.

	* intern.h (rb_gc_mark_parser): added.

Thu Sep  5 13:09:22 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_eval): overriding false constant with class/module
	  definition should be error.  (PR#327)

	* eval.c (rb_call0): preset source file/line to pass correct ones
	  to trace_func at end of empty method.  [ruby-dev:18035]

	* ruby.c (require_libraries): not clear source file.